--- a/index.html
+++ b/index.html
@@ -3,50 +3,60 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>EasyFit Tailors</title>
+    <title>EasyFit Tailors – Custom Suits & Alterations in Mumbai</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- 8. META DESCRIPTION FOR GOOGLE -->
     <meta name="description"
-        content="Expert tailoring and custom suits in [Your City]. Professional alterations, wedding dress fittings, and clothing repairs. Visit us today.">
-    <meta name="keywords" content="tailor, custom suits, alterations, dress maker, [Your City]">
+        content="EasyFit Tailors: expert tailoring and custom suits in Mumbai. Professional alterations, wedding dress fittings, and clothing repairs. Visit us today.">
+    <meta name="keywords"
+        content="tailor, custom suits, alterations, dress maker, Mumbai, wedding fittings, clothing repairs">
+
+    <!-- OPEN GRAPH -->
+    <meta property="og:title" content="EasyFit Tailors – Custom Suits & Alterations in Mumbai">
+    <meta property="og:description" content="Expert tailoring, bespoke suits, and professional alterations in Mumbai.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://github.com/Prasann62/shop">
+    <meta property="og:image"
+        content="https://images.unsplash.com/photo-1558171813-4c088753af8f?auto=format&fit=crop&w=1200&q=80">
 
     <!-- SCHEMA MARKUP FOR LOCAL BUSINESS -->
     <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Tailor",
-    "name": "EasyFit Tailors",
-    "image": "https://your-website.com/logo.jpg",
-    "telephone": "+1-234-567-8900",
-    "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "123 Fashion Avenue, Suite 101",
-      "addressLocality": "New York",
-      "addressRegion": "NY",
-      "postalCode": "10012",
-      "addressCountry": "US"
-    },
-    "geo": {
-      "@type": "GeoCoordinates",
-      "latitude": 40.7128,
-      "longitude": -74.0060
-    },
-    "openingHoursSpecification": {
-      "@type": "OpeningHoursSpecification",
-      "dayOfWeek": [
-        "Monday",
-        "Tuesday",
-        "Wednesday",
-        "Thursday",
-        "Friday"
-      ],
-      "opens": "09:00",
-      "closes": "19:00"
-    },
-    "priceRange": "$$"
-  }
-  </script>
+    {
+      "@context": "https://schema.org",
+      "@type": "Tailor",
+      "name": "EasyFit Tailors",
+      "image": "https://images.unsplash.com/photo-1558171813-4c088753af8f?auto=format&fit=crop&w=800&q=80",
+      "telephone": "+91-90476-88178",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "123 Fashion Avenue, Suite 101",
+        "addressLocality": "Mumbai",
+        "addressRegion": "MH",
+        "postalCode": "400001",
+        "addressCountry": "IN"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 19.0760,
+        "longitude": 72.8777
+      },
+      "openingHoursSpecification": {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": [
+          "Monday",
+          "Tuesday",
+          "Wednesday",
+          "Thursday",
+          "Friday",
+          "Saturday"
+        ],
+        "opens": "09:00",
+        "closes": "19:00"
+      },
+      "priceRange": "$$"
+    }
+    </script>
 
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -64,7 +74,14 @@
     <!-- TOP BAR -->
     <header class="top-bar">
         <div class="container">
-            <div class="logo">Your Tailoring Shop</div>
+            <div class="logo">EasyFit Tailors</div>
+
+            <!-- Mobile Menu Toggle -->
+            <button class="mobile-menu-toggle" aria-label="Toggle navigation">
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+            </button>
 
             <!-- Desktop Nav -->
             <nav class="nav-links">
@@ -74,7 +91,7 @@
             </nav>
 
             <!-- 4. MOBILE CALL BUTTON -->
-            <a href="tel:+1234567890" class="btn mobile-call-btn">Call Now</a>
+            <a href="tel:+919047688178" class="btn mobile-call-btn">Call Now</a>
         </div>
     </header>
 
@@ -119,19 +136,19 @@
                 <!-- REPLACE src WITH YOUR IMAGE FILES -->
                 <div class="gallery-item">
                     <img src="https://images.unsplash.com/photo-1594938298603-c8148c4dae35?auto=format&fit=crop&w=600&q=80"
-                        alt="Grey bespoke suit tailored for a wedding">
+                        alt="Grey bespoke suit tailored for a wedding" loading="lazy">
                 </div>
                 <div class="gallery-item">
                     <img src="https://images.unsplash.com/photo-1507679799987-c73779587ccf?auto=format&fit=crop&w=600&q=80"
-                        alt="Man in a blue jacket fitting session">
+                        alt="Man in a blue jacket fitting session" loading="lazy">
                 </div>
                 <div class="gallery-item">
                     <img src="https://images.unsplash.com/photo-1593030761757-71bd90dbe3e4?auto=format&fit=crop&w=600&q=80"
-                        alt="Detailed sewing work on a dress">
+                        alt="Detailed sewing work on a dress" loading="lazy">
                 </div>
                 <div class="gallery-item">
                     <img src="https://images.unsplash.com/photo-1550246140-511997b433d9?auto=format&fit=crop&w=600&q=80"
-                        alt="Tailor measuring fabric">
+                        alt="Tailor measuring fabric" loading="lazy">
                 </div>
             </div>
         </div>
@@ -164,6 +181,27 @@
         </div>
     </section>
 
+    <!-- TESTIMONIALS (NEW) -->
+    <section class="testimonials" id="testimonials">
+        <div class="container">
+            <h2>What Our Clients Say</h2>
+            <div class="testimonials-grid" style="display: flex; flex-wrap: wrap; gap: 30px; justify-content: center;">
+                <div class="testimonial-card">
+                    <p>"Absolutely thrilled with my custom suit. The fit is perfect!"</p>
+                    <span class="author">- Rajesh K.</span>
+                </div>
+                <div class="testimonial-card">
+                    <p>"Saved my favorite dress with incredible invisible mending. Highly recommend."</p>
+                    <span class="author">- Priya S.</span>
+                </div>
+                <div class="testimonial-card">
+                    <p>"Professional, timely, and very skilled. Best tailor in Mumbai."</p>
+                    <span class="author">- Amit V.</span>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- CONTACT -->
     <section class="contact" id="contact">
         <div class="container">
@@ -174,10 +212,10 @@
 
                 <p><strong>Address:</strong><br />
                     123 Fashion Avenue, Suite 101<br />
-                    New York, NY 10012</p>
+                    Mumbai, MH 400001</p>
 
                 <p><strong>Phone:</strong><br />
-                    <a href="tel:+1234567890">(555) 123-4567</a>
+                    <a href="tel:+919047688178">+91 90476 88178</a>
                 </p>
 
                 <p><strong>Hours:</strong><br />
@@ -202,34 +240,33 @@
 
             <div class="booking-form">
                 <h3>Request a Fitting</h3>
-                <!-- 6. FORMSPREE PLACEHOLDER: Replace action="..." with your Formspree link -->
-                <form action="https://formspree.io/f/YOUR_FORM_ID_HERE" method="POST">
-                    <label>Full Name</label>
-                    <input type="text" name="name" placeholder="John Doe" required />
+                <form name="contact" netlify method="POST">
+                    <label for="name">Full Name</label>
+                    <input type="text" id="name" name="name" placeholder="John Doe" required />
 
-                    <label>Email Address</label>
-                    <input type="email" name="email" placeholder="john@example.com" required />
+                    <label for="email">Email Address</label>
+                    <input type="email" id="email" name="email" placeholder="john@example.com" required />
 
-                    <label>Service Needed</label>
-                    <select name="service">
-                        <option>Custom Suit / Dress</option>
-                        <option>Alterations</option>
-                        <option>Repair</option>
-                        <option>Consultation</option>
+                    <label for="service">Service Needed</label>
+                    <select id="service" name="service">
+                        <option value="Custom Suit / Dress">Custom Suit / Dress</option>
+                        <option value="Alterations">Alterations</option>
+                        <option value="Repair">Repair</option>
+                        <option value="Consultation">Consultation</option>
                     </select>
 
-                    <label>Message</label>
-                    <textarea name="message" rows="4"
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message" rows="4"
                         placeholder="Tell us about your event or specific needs..."></textarea>
 
-                    <button type="submit" class="btn">Send Request</button>
+                    <button type="submit" class="btn">Send Message</button>
                 </form>
             </div>
         </div>
     </section>
 
     <!-- CALL FLOATING BUTTON -->
-    <a href="tel:+919047688178" class="call-float">
+    <a href="tel:+919047688178" class="call-float" aria-label="Call us">
         <svg class="call-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
             <path
                 d="M20.01 15.38c-1.23 0-2.42-.2-3.53-.56a.977.977 0 0 0-1.01.24l-1.57 1.97c-2.83-1.44-5.15-3.75-6.59-6.59l1.97-1.57c.26-.26.35-.63.24-1.01a17.9 17.9 0 0 0-.56-3.53.995.995 0 0 0-1-.75h-3.3c-.55 0-1 .45-1 1C4.06 13.52 13.52 23 23 23c.55 0 1-.45 1-1v-3.3c0-.52-.42-.97-.93-1.02z" />
@@ -237,7 +274,7 @@
     </a>
 
     <!-- WHATSAPP FLOATING BUTTON -->
-    <a href="https://wa.me/+919047688178" class="whatsapp-float" target="_blank">
+    <a href="https://wa.me/+919047688178" class="whatsapp-float" target="_blank" aria-label="Chat on WhatsApp">
         <svg class="whatsapp-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
             <path
                 d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7.9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z" />
@@ -248,7 +285,7 @@
     <footer>
         <div class="container">
             <div class="footer-col">
-                <h4>Your Tailoring Shop</h4>
+                <h4>EasyFit Tailors</h4>
                 <p>Elevating style through precise craftsmanship.</p>
             </div>
             <div class="footer-col">
@@ -270,7 +307,7 @@
             </div>
         </div>
         <div class="container" style="border:none; padding:0;">
-            &copy; 2025 Your Tailoring Shop. All rights reserved.
+            &copy; 2025 EasyFit Tailors. All rights reserved.
         </div>
     </footer>
 
@@ -278,6 +315,11 @@
     <div id="myLightbox" class="lightbox">
         <span class="close-lightbox">&times;</span>
         <img class="lightbox-content" id="img01" alt="Enlarged gallery image">
+    </div>
+
+    <!-- TOAST NOTIFICATION -->
+    <div id="toast" class="toast" role="alert" aria-live="polite">
+        Thank you! We will contact you shortly.
     </div>
 
     <!-- EXTERNAL JS -->
